F105: switch to USB On-The-Go Host and Device Lib V2.2.1: adapt patches and script, use symbolic constants in report descriptor, respond to configuration report ID only,  workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=83967, now newer gcc-arm-none-eabi versions do work, adapt IR.Bootloader.coproj to new gcc-arm-none-eabi versions

--- a/STM32F105/Makefile
+++ b/STM32F105/Makefile
@@ -20,9 +20,9 @@ INCLUDES += -Isemihosting -Istdio
 endif
 DEFINES = -D$(PLATFORM) -DSTM32F10X_CL -DUSE_STDPERIPH_DRIVER
 
-OBJS = src/irmpmain.o src/st_link_leds.o src/usb_hid.o src/main.o\
+OBJS = cmsis_boot/startup/startup_stm32f10x_cl.o cmsis_boot/system_stm32f10x.o\
+       src/irmpmain.o src/st_link_leds.o src/usb_hid.o src/main.o\
        irmp/irmp.o irmp/irsnd.o\
-       cmsis_boot/startup/startup_stm32f10x_cl.o cmsis_boot/system_stm32f10x.o\
        stm_lib/src/misc.o\
        stm_lib/src/stm32f10x_flash.o stm_lib/src/stm32f10x_gpio.o\
        stm_lib/src/stm32f10x_rcc.o\
