F303: switch to USB-FS-Device_Lib_V4.1.0: adapt patches and script, use symbolic constants in report descriptor, respond to configuration report ID only,  workaround for https://gcc.gnu.org/bugzilla/show_bug.cgi?id=83967, now newer gcc-arm-none-eabi versions do work, adapt F303.Bootloader.coproj to new gcc-arm-none-eabi versions, firmwares

--- a/STM32F303/Makefile
+++ b/STM32F303/Makefile
@@ -22,9 +22,9 @@ INCLUDES += -Isemihosting -Istdio
 endif
 DEFINES = -D$(PLATFORM) -DSTM32F30X -DUSE_STDPERIPH_DRIVER -DSOF_CALLBACK
 
-OBJS = src/irmpmain.o src/st_link_leds.o src/usb_hid.o src/main.o\
+OBJS = cmsis_boot/startup/startup_stm32f30x.o cmsis_boot/system_stm32f30x.o\
+       src/irmpmain.o src/st_link_leds.o src/usb_hid.o src/main.o\
        irmp/irmp.o irmp/irsnd.o\
-       cmsis_boot/startup/startup_stm32f30x.o cmsis_boot/system_stm32f30x.o\
        stm_lib/src/stm32f30x_misc.o stm_lib/src/stm32f30x_exti.o\
        stm_lib/src/stm32f30x_flash.o stm_lib/src/stm32f30x_gpio.o\
        stm_lib/src/stm32f30x_pwr.o stm_lib/src/stm32f30x_rcc.o\
