--- a/STM32F303xC/Makefile
+++ b/STM32F303xC/Makefile
@@ -16,7 +16,7 @@ OBJCP = $(CROSS_COMPILE)objcopy
 
 ARCH = -mcpu=cortex-m4 -mthumb
 COMMON = -g -Os -flto
-INCLUDES = -Icmsis -Icmsis_boot -Istm_lib/inc -Iusb_hid/inc -Iirmp -Isrc -Itm1637
+INCLUDES = -Icmsis -Icmsis_boot -Istm_lib/inc -Iusb_hid/inc -Iirmp -Isrc
 ifdef DEBUG
 INCLUDES += -Isemihosting -Istdio
 endif
@@ -34,7 +34,7 @@ OBJS = cmsis_boot/startup/startup_stm32f30x.o cmsis_boot/system_stm32f30x.o\
        usb_hid/src/usb_endp.o usb_hid/src/usb_istr.o usb_hid/src/usb_prop.o\
        usb_hid/src/usb_pwr.o usb_hid/src/usb_core.o usb_hid/src/usb_init.o\
        usb_hid/src/usb_int.o usb_hid/src/usb_mem.o usb_hid/src/usb_regs.o\
-       usb_hid/src/usb_sil.o tm1637/tm1637.o
+       usb_hid/src/usb_sil.o
 ifdef DEBUG
 OBJS += semihosting/semihosting.o semihosting/sh_cmd.o  stdio/printf.o
 endif
@@ -66,14 +66,16 @@ DEFINES += -DSimpleCircuit
 TARGET := $(TARGET)_SC
 endif
 
-ifdef EXTLED
-DEFINES += -DEXTLED
-#TARGET := $(TARGET)_
+ifdef NOEXTLED
+DEFINES += -DNOEXTLED
+TARGET := $(TARGET)_RS
 endif
 
-ifdef SHORTFLASH
-DEFINES += -DSHORTFLASH
-#TARGET := $(TARGET)_
+ifdef TM1637
+INCLUDES += -Itm1637
+OBJS += tm1637/tm1637.o
+DEFINES += -DTM1637
+TARGET := $(TARGET)_TM
 endif
 
 ifdef DEBUG
