--- a/RP2xxx/CMakeLists.txt
+++ b/RP2xxx/CMakeLists.txt
@@ -47,7 +47,7 @@ string(STRIP ${IRMP_VERSION} IRMP_VERSION)
 
 target_compile_definitions(timestamp PRIVATE FW_STR="${BUILD_TIME}_${PICO_BOARD}   IRMP-Version: ${IRMP_VERSION}*RP2xxx")
 
-set(FW_STR "${BUILD_TIME}_${PICO_BOARD}   IRMP-Version: ${IRMP_VERSION}*RP2xxx")
+set(FW_STR "${BUILD_TIME}_${PICO_BOARD}_hid_irmp   IRMP-Version: ${IRMP_VERSION}*RP2xxx")
 
 target_include_directories(timestamp PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
 
