make firmware string and filename consistent (2)

--- a/RP2xxx/CMakeLists.txt
+++ b/RP2xxx/CMakeLists.txt
@@ -45,7 +45,7 @@ execute_process (COMMAND bash -c "grep -e 'Version IRMP' ${CMAKE_CURRENT_SOURCE_
 
 string(STRIP ${IRMP_VERSION} IRMP_VERSION)
 
-target_compile_definitions(timestamp PRIVATE FW_STR="${BUILD_TIME}_${PICO_BOARD}   IRMP-Version: ${IRMP_VERSION}*RP2xxx")
+target_compile_definitions(timestamp PRIVATE FW_STR="${BUILD_TIME}_${PICO_BOARD}_hid_irmp   IRMP-Version: ${IRMP_VERSION}*RP2xxx")
 
 set(FW_STR "${BUILD_TIME}_${PICO_BOARD}_hid_irmp   IRMP-Version: ${IRMP_VERSION}*RP2xxx")
 
