--- a/irmplircd/irmplircd.service
+++ b/irmplircd/irmplircd.service
@@ -5,7 +5,7 @@ After=dev-irmp_stm32.device
 
 [Service]
 Type=forking
-ExecStart=/usr/bin/irmplircd -t /etc/irmp_stm32.map -r 300 -s 100 /dev/irmp_stm32
+ExecStart=/usr/bin/irmplircd -t /etc/irmp_stm32.map /dev/irmp_stm32
 
 [Install]
 WantedBy=dev-irmp_stm32.device
