--- a/stm32IRconfig_gui/Linux/Makefile
+++ b/stm32IRconfig_gui/Linux/Makefile
@@ -8,11 +8,11 @@ CPPOBJS=stm32IRconfig_gui.o icons.o dfu.o stm32mem.o upgrade.o
 OBJS=$(COBJS) $(CPPOBJS)
 ifeq ($(OS),Windows_NT)
 ifeq ($(MSYSTEM),MINGW32)
-CFLAGS=-I/mingw32/include/fox-1.6 -I/mingw64/include/libusb-1.0 -g -c -s -Wall -mno-ms-bitfields -O2 -DDATE_STR="\"$(DATE)""
+CFLAGS=-I/mingw32/include/fox-1.6 -I/mingw64/include/libusb-1.0 -g -c -s -Wall -mno-ms-bitfields -O2 -DDATE_STR="\"$(DATE)\""
 # -static
 LIBS= -mwindows -Wl,-Bstatic -lFOX-1.6 -lpng -ljpeg -ltiff -lz -llzma -lws2_32 -lgdi32 -static-libgcc -static-libstdc++ -lkernel32 -lsetupapi -lusb-1.0
 else ifeq ($(MSYSTEM),MINGW64)
-CFLAGS=-I/mingw64/include/fox-1.6 -I/mingw64/include/libusb-1.0 -g -c -s -Wall -mno-ms-bitfields -O2 -DDATE_STR="\"$(DATE)""
+CFLAGS=-I/mingw64/include/fox-1.6 -I/mingw64/include/libusb-1.0 -g -c -s -Wall -mno-ms-bitfields -O2 -DDATE_STR="\"$(DATE)\""
 # -static
 LIBS= -mwindows -Wl,-Bstatic -lFOX-1.6 -lpng -ljpeg -ltiff -lz -lzstd -llzma -lws2_32 -lgdi32 -static-libgcc -static-libstdc++ -lkernel32 -lsetupapi -lusb-1.0
 endif
